<resources>
	<string name="app_name">Ameryka szpital porady</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="menu_advices">Porady</string>
	<string name="menu_import_advice">Importuj poradę</string>
	<string name="menu_about_hospital">O szpitalu</string>
	<string name="menu_about_app">O aplikacji</string>
	<string name="menu_log_out">Wyloguj się</string>
	<string name="not_logged_in_msg">Proszę się zalogować</string>
	<string name="splash_hospital_name">Wojewódzki Szpital Rehabilitacyjny dla Dzieci w
		Ameryce
	</string>
	<string name="splash_hospital_default_msg">Porady medyczne od naszych specjalistów</string>
	<string name="log_in_btn">Zaloguj się</string>
	<string name="sign_in_cancelled">Błąd: anulowano logowanie</string>
	<string name="no_internet_connection">Błąd: brak połączenia z internetem</string>
	<string name="unknown_error">Błąd: nieznany błąd</string>
	<string name="menu_more_info">Informacje</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="place_for_advices">Miejsce na porady</string>
	<string name="import_advice_header">Importuj poradę</string>
	<string name="import_advice_explanation">Aby zaimportować poradę kliknij w link, który
		otrzymałeś w wiadomości SMS. Jeżeli nie otrzymałeś wiadomości SMS,
		skontaktuj się ze szpitalem i poproś o kod porady, a następnie wpisz
		go w poniższym polu.</string>
	<string name="import_advice_btn">Importuj</string>
	<string name="about_hospital_title">Wojewódzki Szpital Rehabilitacyjny dla Dzieci w
		Ameryce</string>
	<string name="about_hospital_link_text">
		Strona internetowa: &lt;a
		href=https://ameryka.com.pl>www.ameryka.com.pl&lt;/a>
	</string>
	<string name="about_hospital_text_1">Wojewódzki Szpital Rehabilitacyjny dla Dzieci w
		Ameryce k. Olsztynka jest samodzielnym publicznym zakładem opieki
		zdrowotnej zajmującym się usprawnianiem leczniczym w formie
		hospitalizacji.W ciągu ostatnich lat, dzięki znacznym środkom
		finansowym, przygotowaliśmy bardzo nowoczesną placówkę
		rehabilitacyjną, a nasz zapał i zaangażowanie gwarantują dalszy jej
		rozwój.

		Nasz zespół, to grono znakomitych specjalistów: lekarzy,
		fizjoterapeutów,
		pielęgniarek i pedagogów.

		Naszym nadrzędnym celem jest
		zawsze dobro naszych pacjentów. Staramy się nie
		tylko utrzymać wysoki
		poziom kwalifikacji, ale także wspierać leczenie
		ciepłą i serdeczną
		atmosferą.

		Atutem naszej placówki jest doskonałe położenie w kompleksie
		leśnym o
		unikalnym mikroklimacie, którego walory lecznicze potwierdzają
		badania
		naukowe i blisko 100-letnia tradycja.
	</string>
	<string name="loading">Ładowanie...</string>
	<string name="bullet_separator">•</string>
    <string name="sharedstorage_key_advice_to_be_imported">advice_to_be_imported</string>
	<string name="advice_import_instructions">
		Aby importować poradę kliknij w link, który dostałeś w wiadomości SMS.
		(w razie problemów przepisz kod z wiadomości SMS do panelu \"Importuj poradę\" lub skontaktuj się ze szpitalem.
	</string>
    <string name="thank_button">Podziękuj za poradę</string>
    <string name="clickToThank">Kliknij i podziękuj medykowi za każdym razem, kiedy jego porada była przydatna. Specjalista będzie widział ilość podziękowań. Dzięki temu zachęcisz specjalistów do włożenia serca w pisanie porad.</string>
</resources>
