<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item android:id="@+id/nav_advices"
			android:icon="@drawable/ic_message_grey_800_18dp"
			android:title="@string/menu_advices" />

		<item android:id="@+id/nav_import_advice"
			android:icon="@drawable/ic_playlist_add_grey_800_18dp"
			android:title="@string/menu_import_advice" />

		<item android:id="@+id/nav_logout"
			android:icon="@drawable/ic_close_grey_800_18dp"
			android:title="@string/menu_log_out" />
	</group>

	<item android:title="@string/menu_more_info">
		<menu>
			<item android:id="@+id/nav_about_hospital"
				android:icon="@drawable/ic_location_city_grey_800_18dp"
				android:title="@string/menu_about_hospital" />

			<item android:id="@+id/nav_about_app"
				android:icon="@drawable/ic_smartphone_grey_800_18dp"
				android:title="@string/menu_about_app" />
		</menu>
	</item>

</menu>
