<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.importadvice.ImportAdviceFragment">


	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginHorizontal="18dp" android:layout_marginTop="18dp">

		<TextView android:text="@string/import_advice_header"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="6dp" />

		<TextView android:text="@string/import_advice_explanation"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
			android:justificationMode="inter_word"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="36dp" />


		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<EditText android:id="@+id/importAdvice_adviceCodeInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textNoSuggestions" android:hint="Kod porady"
				android:layout_marginHorizontal="24dp"
				android:layout_marginTop="0dp"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="24dp" />

			<Button android:id="@+id/importAdvice_importBtn"
				android:text="@string/import_advice_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/importAdvice_adviceCodeInput"
				app:layout_constraintEnd_toEndOf="@id/importAdvice_adviceCodeInput"
				android:layout_marginTop="6dp" android:layout_marginRight="6dp" />

			<ProgressBar
				android:id="@+id/importAdvice_loadingSpinner"
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				app:layout_constraintTop_toBottomOf="@id/importAdvice_importBtn"
				android:layout_marginTop="12dp" android:visibility="gone" />

			<TextView android:id="@+id/importAdvice_statusText"
				android:text="" android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				app:layout_constraintTop_toBottomOf="@id/importAdvice_loadingSpinner"
				android:layout_marginTop="12dp"
				android:layout_marginHorizontal="24dp"
				android:textAlignment="center" android:visibility="gone" />


		</androidx.constraintlayout.widget.ConstraintLayout>



	</LinearLayout>
</FrameLayout>
