<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ac_main_root_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.activity.MainActivity"
	android:background="@color/colorAmerykaGreen">

	<androidx.constraintlayout.widget.Guideline
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ac_main_guideline_horizontal_msg"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.21" />

	<androidx.constraintlayout.widget.Guideline
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ac_main_guideline_horizontal_mid"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.65" />

	<androidx.constraintlayout.widget.Guideline
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/ac_main_guideline_horizontal_hospital"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.91" />


	<ImageView android:id="@+id/imageView1"
		android:scaleType="centerInside"
		app:srcCompat="@drawable/ic_logo_ameryka_white"
		android:layout_width="0dp" android:layout_height="0dp"
		app:layout_constraintWidth_percent="0.8"
		app:layout_constraintHeight_percent="0.3"
		app:layout_constraintBottom_toBottomOf="@id/ac_main_guideline_horizontal_mid"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/ac_main_guideline_horizontal_mid" />

	<TextView android:id="@+id/textView2"
		android:layout_width="0dp" android:layout_height="wrap_content"
		android:fontFamily="sans-serif-medium"
		android:text="@string/splash_hospital_name"
		android:textAlignment="center"
		android:textColor="@android:color/white" android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@id/ac_main_guideline_horizontal_hospital"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/ac_main_guideline_horizontal_hospital"
		app:layout_constraintWidth_percent="0.5" />

	<TextView android:id="@+id/ac_main_msg_text"
		android:layout_width="0dp" android:layout_height="wrap_content"
		android:text="@string/splash_hospital_default_msg"
		android:fontFamily="sans-serif-thin" android:textSize="36sp"
		android:textAlignment="center"
		android:textColor="@android:color/white"
		app:layout_constraintWidth_percent="0.9"
		app:layout_constraintBottom_toBottomOf="@id/ac_main_guideline_horizontal_msg"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/ac_main_guideline_horizontal_msg" />

	<Button android:id="@+id/ac_main_login_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="36dp"
		android:text="@string/log_in_btn" android:textAlignment="center"
		android:visibility="gone" app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/ac_main_msg_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
